ui_tests/args_differ.stderr
error: mismatched types: a:!U0_0 b:!U0_1
  ┌─ main.box:5:16
  │
5 │         field: w,
  │                ^

error: mismatched types: a:!U0_1 b:!U0_0
  ┌─ main.box:6:18
  │
6 │         other_f: x,
  │                  ^

error: mismatched types: a:Foo[!U0_1, !U0_0] b:Foo[!U0_0, !U0_1]
  ┌─ main.box:3:39
  │  
3 │   fn foo[W, X](w: W, x: X) -> Foo[W, X] {
  │ ╭───────────────────────────────────────^
4 │ │     new Foo[X, W] {
5 │ │         field: w,
6 │ │         other_f: x,
7 │ │     }
8 │ │ }
  │ ╰─^

